--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Spotify Popular Artists Ranking</h1>
+        <h1>Spotify Artists Popularity Ranking</h1>
 
         <div class="search-section">
             <input type="text" id="artist-search-input" placeholder="Search for an artist..." autocomplete="off">
